# MarIA

./: -Iinclude.sh  .gitignore  CMakeLists.txt  README.md  estructura-proyecto.md  main.cpp
assets/textures/: README.md
include/: AnimatedSprite.h  CombatSystem.h  Enemy.h  Level.h  Menu.h  NPC.h  Player.h  QuestHUD.h  QuestSelector.h  ResourceManager.h  SaveSystem.h
src/: QuestSystem.h  main.cpp
src/core/: AnimatedSprite.cpp  AnimatedSprite.h  CombatSystem.cpp  Enemy.cpp  Enemy.h  GameState.h  Level.cpp  NPC.cpp  NPC.h  Player.cpp  Player.h  QuestSystem.cpp  QuestSystem.h  SaveSystem.cpp  SaveSystem.h
src/ui/: GameOverScreen.cpp  GameOverScreen.h  HUD.h  Menu.cpp  OptionsMenu.cpp  OptionsMenu.h  Optionsmenu.cpp  QuestHUD.h  QuestSelector.cpp  QuestSelector.h  hud.h
src/utils/: ResourceManager.cpp  ResourceManager.h
